fix startpage header size and page content word wrap

--- a/webapp/src/style.scss
+++ b/webapp/src/style.scss
@@ -101,6 +101,7 @@ code {
     padding: 10px 28px 50px 28px;
     background-color: white;
     color: black;
+    word-wrap: break-word;
   }
 }
 
